# aicad.subagent.build123d

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CODEX.md  README.md  pyproject.toml
benchmark/: README.md  audit_generated_code_references.py  canary_case_sets.json  run_prompt_benchmark.py  run_prompt_benchmark.sh  step_similarity_eval.py
benchmark/audits/: 20260320_111748.json  20260324_204500_L2_90.json  20260408_064032_L1_122.json
benchmark/corpus/: external_cadquery_index.json  external_cadquery_stress_set.json
configs/eval/: cad_llm_judge_v1.yaml
demos/build123d_foundations/: README.md  common.py  demo_enclosure_body_lid.py  demo_half_shell_directional_holes.py  (+2 more)
docker/: build123d-runtime.Dockerfile
docs/: CAD_ACTION_ITERATION.md  INDEX.md  INTERFACE.md  OBSERVABILITY.md  REQUIREMENT_GUIDE.md  RUNBOOK.md  feature-agent-loop-v2-runtime-control-surfaces-guide.md
practice/: seed_manifest.json
report-20260413-build123d-experiments/: index.html  main.js  shareable-report.md  styles.css
report-20260414-build123d-vs-cadquery-benchmark/: detailed-evidence.md  index.html  main.js  shareable-report.md  styles.css
report-20260415-build123d-two-day-progress/: index.html  main.js  shareable-report.md  styles.css
report-20260419-build123d-practice-progress/: index.html  main.js  shareable-report.md  styles.css
scripts/: archive_historical_runs.py  replay_action_sequence.py  run_aci_live_probe.sh  run_custom_prompt_practice.py  run_relation_base_probe.sh  run_render_view_multiview_probe.sh  run_stage1_manual_probe.sh  run_topology_targeting_practice.py
(+273 files in other folders)
