[project]
name = "aicad-subagent-build123d"
version = "0.1.0"
description = "Decoupled iterative CAD sub-agent runtime with MCP sandbox tooling"
requires-python = ">=3.12,<4.0"
authors = [{ name = "AiCAD.app", email = "dev@aicad.app" }]
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.0.0",
  "mcp>=1.0.0",
  "docker>=7.0.0",
  "build123d>=0.8.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "openai>=1.0.0",
  "anthropic>=0.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=0.25.0",
  "black>=24.10.0",
]

[project.scripts]
aicad-iter-run = "sub_agent_runtime.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/common",
  "src/llm",
  "src/sandbox",
  "src/sandbox_mcp_server",
  "src/sub_agent_runtime",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests/unit"]
markers = [
  "integration: tests that call external systems such as real LLM APIs or Docker",
]
